cabal-version:      2.4
name:               Minsk
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Kyle Coffey
maintainer:         kylecoffey1999@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files:

common exts
    ghc-options:
        -XLambdaCase
        -XApplicativeDo
        -XNoImplicitPrelude
        -XOverloadedStrings
        -XBlockArguments
        -XArrows
        -XMultiWayIf

library
    import: exts
    exposed-modules: Minsk.Diagnostic
                   , Minsk.Lexer
                   , Minsk.SyntaxToken
                   , Minsk.SyntaxKind
                   , Minsk.Object
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:     src
    build-depends:      base ^>=4.17.2.1
                      , basic-prelude
                      , text
                      , mtl
                      , formatting
    default-language:   Haskell2010

executable MinskCompiler
    import: exts
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , basic-prelude
                    , Minsk
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
