(lang dune 3.7)

(name minsk)

(generate_opam_files true)

(source
 (github Phytolizer/Minsk))

(authors "Kyle Coffey")

(maintainers "Kyle Coffey")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name minsk)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune batteries ppx_deriving alcotest)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
