[tool.poetry]
name = "minsk"
version = "0.1.0"
description = ""
authors = ["Kyle Coffey <me@phytolizer.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 88
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
